[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitsentinel"
version = "0.1.0"
description = "Research-style space AI security prototype"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orbitsentinel = "orbitsentinel.cli:main"

[tool.setuptools.packages.find]
include = ["orbitsentinel*"]
